# gas_nordic

./: .clangd  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  ]  debug.conf  flash.sh  format.sh  prj.conf  release.conf
.cache/clangd/index/: main.c.B99905135F2A6870.idx
boards/: hhs_nrf52832.overlay
boards/arm/hhs_nrf52832/: Kconfig  hhs_nrf52832-pinctrl.dtsi  hhs_nrf52832.dts  hhs_nrf52832_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/bme68x/: CMakeLists.txt  Kconfig  bme68x.c  bme68x.h  bme68x_i2c.c
drivers/bme68x_iaq/: CMakeLists.txt  Kconfig  bme68x_iaq.c  bme68x_iaq.h
dts/bindings/: power-switch.yaml
hardware/eeg/eeg/: BMI270.kicad_sch  POWER SUPPLY.kicad_sch  USB-C.kicad_sch  ads1299.kicad_sch  eeg.csv  eeg.kicad_pcb  eeg.kicad_prl  eeg.kicad_pro  eeg.kicad_sch  fp-info-cache  nrf5340.kicad_sch  power.kicad_sch  untitled.kicad_sch
hardware/gas_nrf52832/: #auto_saved_files#  fp-info-cache  fp-lib-table  gas_nrf52832.csv  gas_nrf52832.kicad_pcb  gas_nrf52832.kicad_prl  gas_nrf52832.kicad_pro  gas_nrf52832.kicad_sch  gas_nrf52832.kicad_sch-bak  gas_nrf52832.xml  nrf52832.kicad_sch  power.kicad_sch  sensor.kicad_sch  sym-lib-table  untitled.kicad_sch  ~gas_nrf52832.kicad_pcb.lck  ~gas_nrf52832.kicad_sch.lck
hardware/gas_nrf52832/Gerber/: gas_nrf52832-B_Courtyard.gbr  gas_nrf52832-B_Cu.gbl  gas_nrf52832-B_Fab.gbr  gas_nrf52832-B_Mask.gbs  gas_nrf52832-B_Paste.gbp  (+14 more)
include/drivers/: bme68x_iaq.h
src/: alarm.c  alarm.h  batt_mon.c  battery.c  battery.h  bluetooth.c  bluetooth.h  bme680.c  bme680_app.c  bme680_app.h  ema.h  enum_macro.h  gas.c  gas.h  hhs_math.c  hhs_math.h  hhs_util.h  led.c  led.h  main.c  power_switch.c  settings.c  settings.h  switch.c  switch.h  version.h
(+113 files in other folders)
